syntax = "proto3";
package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum = 1;
}

message PrimeNumberRequest{
    int64 number = 1;
}

message PrimeNumberResponse {
    int64 number = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumber(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};
}